# api/v2/oas_request_encoders_gen.go
@@ -11,6 +11,62 @@ import (
 	ht "github.com/ogen-go/ogen/http"
 )
 
+func encodeGetOrganizationRequest(
+	req *GetOrganizationRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeGetOrganizationsRequest(
+	req *GetOrganizationsRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeGetPeopleRequest(
+	req *GetPeopleRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeGetPersonRequest(
+	req *GetPersonRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeSetPersonOrcidRequest(
 	req *SetPersonOrcidRequest,
 	r *http.Request,
@@ -55,6 +111,34 @@ func encodeSetPersonRoleRequest(
 
 func encodeSetPersonSettingsRequest(
 	req *SetPersonSettingsRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeSuggestOrganizationsRequest(
+	req *SuggestOrganizationsRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := jx.GetEncoder()
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeSuggestPeopleRequest(
+	req *SuggestPeopleRequest,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
